--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -51,7 +51,7 @@ ja:
     formats:
       default: "%Y/%m/%d"
       long: "%Y年%m月%d日(%a)"
-      short: "%m/%d"
+      short: "%y/%m/%d"
     month_names:
       -
       - 1月
