--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -211,7 +211,7 @@ ja:
   time:
     am: 午前
     formats:
-      default: "%Y年%m月%d日(%a) %H時%M分%S秒"
+      default: "%Y/%m/%d"
       long: "%Y/%m/%d %H:%M"
-      short: "%m/%d %H:%M"
+      short: "%H:%M"
     pm: 午後
